# agent-sync

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  details.html  go.mod  index.html  pyproject.toml  sample-rule.md  setup.html
.cursor/rules/: sample-rule.mdc
.github/workflows/: ci.yml
cmd/agent-sync/: main.go
compiler/: models.py
compiler/adapters/: claude.py  gemini.py
docs/: adapters.md  architecture.md  benchmarks.md  configuration.md  examples.md  index.md
internal/cli/: root.go
src/agent_sync/: cli.py  main.py
src/agent_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agent_sync/adapters/: codex.py  copilot.py
src/agentsync_vcs/: cli.py  main.py  models.py  parser.py
src/agentsync_vcs/adapters/: base.py  claude.py  copilot.py  cursor.py  trae.py  windsurf.py
tests/: benchmark_performance.py  test_cli.py
